Update Mini App with Tic-Tok game and remove bot.py

--- a/index.html
+++ b/index.html
@@ -1,23 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Telegram Mini App</title>
+  <title>Telegram Mini App Game</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+      background: linear-gradient(to bottom, #f0f0f0, #d0e6f7);
+    }
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+    #gameArea {
+      margin-top: 20px;
+    }
+    .square {
+      width: 50px;
+      height: 50px;
+      background-color: #ff6b6b;
+      display: inline-block;
+      margin: 5px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Telegram App!</h1>
-  <button id="sendData">Send Data to Bot</button>
+  <h1>Welcome to the Mini Game!</h1>
+
+  <!-- Ask for user name -->
+  <div id="nameArea">
+    <input type="text" id="userName" placeholder="Enter your name" />
+    <button id="startGame">Start Game</button>
+  </div>
+
+  <!-- Game area -->
+  <div id="gameArea" style="display:none;">
+    <h2>Click the squares!</h2>
+    <div id="squares"></div>
+    <h3>Score: <span id="score">0</span></h3>
+    <button id="sendScore">Send Score to Bot</button>
+  </div>
 
   <script>
     const tg = window.Telegram.WebApp;
-
-    // Make the app full screen
     tg.expand();
 
-    // Send data to the bot
-    document.getElementById("sendData").addEventListener("click", () => {
-      tg.sendData(JSON.stringify({ message: "Hello from Mini App!" }));
+    let userName = "";
+    let score = 0;
+
+    const squaresContainer = document.getElementById("squares");
+
+    // Start game button
+    document.getElementById("startGame").addEventListener("click", () => {
+      const nameInput = document.getElementById("userName").value.trim();
+      if(nameInput === "") {
+        alert("Please enter your name!");
+        return;
+      }
+      userName = nameInput;
+      document.getElementById("nameArea").style.display = "none";
+      document.getElementById("gameArea").style.display = "block";
+      createSquares();
+    });
+
+    // Create clickable squares
+    function createSquares() {
+      squaresContainer.innerHTML = "";
+      for(let i=0; i<9; i++) {
+        const square = document.createElement("div");
+        square.classList.add("square");
+        square.addEventListener("click", () => {
+          score++;
+          document.getElementById("score").innerText = score;
+        });
+        squaresContainer.appendChild(square);
+      }
+    }
+
+    // Send score to Telegram bot
+    document.getElementById("sendScore").addEventListener("click", () => {
+      const data = { name: userName, score: score };
+      tg.sendData(JSON.stringify(data));
+      alert(`Score sent! Name: ${userName}, Score: ${score}`);
     });
   </script>
 </body>
